--- a/partials/new.phtml
+++ b/partials/new.phtml
@@ -27,4 +27,6 @@ if ($__uid) {
         <li><?= $l10n['if_no_account'] ?> &rarr; <a
                 href="<?= url(['action' => 'register']) ?>"><?= $l10n['register'] ?></a></li>
     </ul>
+    <br/>
+    &rarr; <a href="javascript:history.back()"><?= $l10n['go_back'] ?></a>
 </div>
