--- a/css/common.less
+++ b/css/common.less
@@ -27,3 +27,20 @@ label {
   font-weight: normal;
   margin-bottom: 0;
 }
+
+html {
+  height: 100%;
+  body {
+    height: 100%;
+    .content-wrapper {
+      min-height: 100%;
+      margin: 0 auto -50px;
+    }
+
+    .footer, .footer-placeholder {
+      height: 50px;
+      margin: 0 auto;
+    }
+  }
+}
+
